--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
     <groupId>groupId</groupId>
     <artifactId>MTG</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <!-- https://mvnrepository.com/artifact/org.json/json -->
+    <dependencies>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20170516</version>
+        </dependency>
+    </dependencies>
 
-    
+
 </project>
